# Ecluse

./: .gitignore  .hlint.yaml  .mcp.json  .npmrc  .stan.toml  AGENTS.md  AI-DISCLOSURE.md  ALTERNATIVES.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  HADDOCK.md  LICENSE  MOTIVATION.md  Makefile  README.md  SECURITY.md  STYLE.md  SUPPORT.md  Taskfile.yml  USAGE.md  VERSIONING.md  cabal.project  cabal.project.freeze  codecov.yml  ecluse.cabal  fix_imports.py  flake.nix  format.patch  format2.patch  fourmolu.yaml  identifiers.txt  npm-secure-proxy.cabal  pr_body.md  recover.py  recover_blobs.py  repl_cmds.hs  rm_unused_imports.py  (+4 more)
.agents/: compact-prompt.md  context-management.md  orchestration-strategy.md  remote-execution.md  settings.local.json
.agents/skills/open-pull-request/: SKILL.md
.agents/skills/orchestrate-implementation/: SKILL.md
.agents/skills/orientation/: SKILL.md
.agents/skills/resume-orchestration/: SKILL.md
.claude/skills/: open-pull-request  orchestrate-implementation  resume-orchestration
.claude/skills/ecosystem-abstraction-audit/: SKILL.md
.claude/skills/open-pull-request/: SKILL.md
.claude/skills/orientation/: SKILL.md
.claude/skills/resume-orchestration/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json5  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-toolchain/: action.yml
.github/workflows/: analysis.yml  bench-load.yml  bench.yml  cache-cleanup.yml  ci.yml  flakehub.yml  pages.yml  perf-acceptance.yml  project-priority-sync.yml  release.yml  scorecard.yml  security.yml  semgrep.yml
acceptance/: criteria.json
acceptance/app/: Main.hs
acceptance/src/Ecluse/: Acceptance.hs
app/: Main.hs
bench/: Main.hs
bench/Ecluse/Bench/: Corpus.hs  Fit.hs
bench/Ecluse/Core/: MergeBench.hs  RouteBench.hs  RulesBench.hs  SecurityBench.hs  SelectiveBench.hs  ServeBench.hs  StreamBench.hs  VersionBench.hs  WireBench.hs
bench/corpus/: package.json  pins.json
bench/corpus/npm/: aws-sdk-client-s3.full.json  babel-core.full.json  is-odd.full.json  left-pad.full.json  lodash.full.json  react.full.json  request.full.json  types-node.full.json  typescript.full.json  webpack.full.json
bench/load/: Main.hs
bench/report/: Main.hs
config/: default.yaml
core/test/unit/: Spec.hs
docs/: architecture.md  getting-started.md  haddock.md  style.md  testing.md
docs/architecture/: access-model.md  api-surface.md  cloud-backends.md  configuration.md  diagrams.md  domain-model.md  fault-model.md  hosting.md  observability.md  performance.md  registry-model.md  release-supply-chain.md  rules-engine.md  security.md  technology-stack.md  threat-model.md  web-layer.md
docs/branding/: colours.md
docs/research/: synthesis.md
docs/research/reverse-engineering/: README.md  npm.md  pypi.md  rubygems.md
examples/: .env.example  config.example.yaml  docker-compose.yml
manifest/Ecluse/: Manifest.hs
openapi/: openapi.json
planning/: README.md  delivery-plan.md  design-queue.md  orchestration-strategy.md
planning/slices/: S01-app-env-scaffold.md  S02-handle-interfaces.md  S02-seam-interfaces.md  S03-config-loader.md  S04-logging-katip.md  S05-rules-precedence.md  S06-npm-wire-decoders.md  S07-npm-projection.md  S08-npm-data-plane.md  S09-npm-rewrite-filter.md  S10-router.md  S11-response-model.md  S12-wai-app-middleware.md  S13-streaming-cache.md  S14-packument-path.md  S15-tarball-path.md  S16-credential-wrapper.md  S17-codeartifact-leaf.md  S18-sqs-queue.md  S19-mirror-worker.md  S20-aws-composition.md  S21-effectful-tier.md  S22-cve-sync.md  S23-deny-if-cve.md  S24-otel-substrate.md  S25-tracing-spans.md  S26-metrics-logs.md  S27-gcp-spike.md  S28-pubsub-queue.md  S29-adc-credential.md  S30-gcp-composition.md  S31-provenance-sbom.md  S32-launch-docs.md  S33-packument-merge.md  S34-capability-manifest.md  S35-openapi-drift-controls.md  S36-security-guards.md  S37-benchmark-harness.md  S38-pipeline-benchmarks.md  S39-load-and-memory.md  (+16 more)
scripts/: check-image-digest-pinning.sh  check-image-digest-pinning.test.sh  check-site-links.sh  check-site-metadata.sh  coverage-combined.sh  coverage.sh  docker-prepull.sh  e2e.sh  gen-bench-corpus.sh  gen-provenance.sh  gen-version-fixtures.sh  grype-sarif-locations.sh  new-worktree.sh  osv-freeze-ignore.txt  osv-freeze-scan.sh  project-priority-sync.sh  prune-caches.py  prune-caches.sh  push-multiarch.sh  reap-hls-caches.sh  release-notes.sh  rewrite-haddock-dep-links.sh  rewrite-haddock-dep-links.test.sh  rm-worktree.sh  sarif-locations.sh  setup-jules.sh  test-containers.sh  vuln-issue.sh  vuln-report.sh
src/: Ecluse.hs  NpmSecureProxy.hs
src/Ecluse/: App.hs  Boot.hs  Breaker.hs  CLI.hs  CheckConfig.hs  Composition.hs  Config.hs  Credential.hs  Dredger.hs  Ecosystem.hs  Env.hs  Log.hs  Manifest.hs  Osv.hs  Package.hs  Pilot.hs  Proxy.hs  Queue.hs  Registry.hs  Rts.hs  Rules.hs  Runtime.hs  Security.hs  Server.hs  Telemetry.hs  Text.hs  Version.hs  Wire.hs  Worker.hs
src/Ecluse/Composition/: BootError.hs  Credential.hs  MemoryBudget.hs  MemoryPlan.hs  MirrorQueue.hs  Plan.hs  Sizing.hs  Worker.hs
src/Ecluse/Config/: Aeson.hs  Ambient.hs  DefaultConfig.hs  MirrorCredential.hs  Parser.hs  QueueTarget.hs  Resolve.hs  Rule.hs  Types.hs
src/Ecluse/Credential/: CodeArtifact.hs  Refresh.hs
src/Ecluse/Osv/: Database.hs  Schema.hs  Stream.hs
src/Ecluse/Package/: Filter.hs  Integrity.hs  Merge.hs
src/Ecluse/Pilot/: Export.hs  Osv.hs  Pipeline.hs
src/Ecluse/Proxy/: CveSync.hs
src/Ecluse/Queue/: Sqs.hs
src/NpmSecureProxy/: Package.hs  Rules.hs
test/: Spec.hs
test/NpmSecureProxy/: PackageSpec.hs  RulesSpec.hs
test/oracles/: package-lock.json  package.json
test/residency/: Main.hs
test/unit/: EcluseSpec.hs
threat-modelling/: ecluse.hcl  ecluse.json
web/: api-index.html  embed-config.lua  index.html  links.lua  mermaid.lua  redoc.html  template.html  threat-model.md  threat-register.lua
web/static/: index.html  robots.txt  sitemap.xml  style.css
(+451 files in other folders)
