cabal-version: 3.0
name:          ecluse
version:       0.1.0
synopsis:      Supply-chain resilience proxy for package registries
description:
  Écluse is a controlled passage in front of package registries (npm, PyPI, …):
  every dependency clears resilience and policy checks — version and age gates
  and rule-based allow/deny — before it reaches your build. See the README for
  the architecture and configuration.
homepage:      https://github.com/AlexaDeWit/Ecluse
license:       MIT
license-file:  LICENSE
author:        Alexandra DeWit
maintainer:    https://github.com/AlexaDeWit
category:      Network, Security
build-type:    Simple

-- Test fixtures read at runtime by the pure unit suite. The version-ordering
-- file is reference-oracle output (regenerate with `make gen-version-fixtures`);
-- the npm/*.json bodies are captures derived from
-- docs/research/reverse-engineering/npm.md, decoded by Ecluse.Registry.Npm.Wire.
-- express.full.json is a real, untrimmed capture of a large trusted package's full
-- packument (registry.npmjs.org/express), so the response-bound defaults can be
-- proven not to false-positive on a legitimate large package.
extra-source-files:
  core/test/unit/fixtures/npm/*.json
  core/test/unit/fixtures/version-ordering.txt

source-repository head
  type:     git
  location: https://github.com/AlexaDeWit/Ecluse.git

-- Shared settings for every component. relude replaces the default prelude via
-- cabal mixins (see docs/architecture.md "relude as the implicit prelude").
common shared
  -- Warning set. -Wall plus extra warnings chosen to reinforce the conventions
  -- in STYLE.md; warnings are promoted to errors for our package in
  -- cabal.project. Deliberately omitted: -Wunused-packages (the relude mixin
  -- defeats its attribution; see docs/architecture.md), -Wmissing-import-lists
  -- (we use open imports for internal modules), and -Wmissing-local-signatures
  -- (where-helpers are allowed to be inferred).
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-selectors
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wmissing-export-lists -Wname-shadowing
    -Wpartial-fields -Wredundant-bang-patterns -Wredundant-constraints

  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    LambdaCase
    OverloadedStrings

  build-depends:
    , base    ^>=4.20
    , relude  ^>=1.2

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude)

-- The pure capability core: domain types, registry adapters, version grammars,
-- credential refresh, rule engine, queue abstraction, security, and the
-- agnostic server layer (Route/Response/Conditional/Stream) and metrics catalogue.
-- The main application library and all test suites depend on this.
library ecluse-core
  import:          shared
  hs-source-dirs:  core/src
  exposed-modules:
    Ecluse.Core.Breaker
    Ecluse.Core.Credential
    Ecluse.Core.Credential.CodeArtifact
    Ecluse.Core.Credential.Refresh
    Ecluse.Core.Credential.Refresh.Internal
    Ecluse.Core.Ecosystem
    Ecluse.Core.Package
    Ecluse.Core.Package.Filter
    Ecluse.Core.Package.Integrity
    Ecluse.Core.Package.Merge
    Ecluse.Core.Queue
    Ecluse.Core.Queue.Sqs
    Ecluse.Core.Registry
    Ecluse.Core.Registry.Npm
    Ecluse.Core.Registry.Npm.Filter
    Ecluse.Core.Registry.Npm.Project
    Ecluse.Core.Registry.Npm.Route
    Ecluse.Core.Registry.Npm.Serve
    Ecluse.Core.Registry.Npm.Wire
    Ecluse.Core.Registry.Pypi.Wire
    Ecluse.Core.Registry.Rubygems.Wire
    Ecluse.Core.Rules
    Ecluse.Core.Rules.Effectful
    Ecluse.Core.Rules.Types
    Ecluse.Core.Security
    Ecluse.Core.Security.Egress
    Ecluse.Core.Server.Conditional
    Ecluse.Core.Server.Response
    Ecluse.Core.Server.Route
    Ecluse.Core.Server.Stream
    Ecluse.Core.Telemetry.Metrics
    Ecluse.Core.Text
    Ecluse.Core.Version
    Ecluse.Core.Wire

  -- Per-ecosystem version grammars and their shared lexical atoms. Internal to
  -- ecluse-core: VersionKey is opaque, so callers reach these only through the
  -- agnostic Ecluse.Core.Version API.
  other-modules:
    Ecluse.Core.Version.Gem
    Ecluse.Core.Version.Pep440
    Ecluse.Core.Version.Semver
    Ecluse.Core.Version.Token

  build-depends:
    , aeson                 ^>=2.2
    , amazonka              ^>=2.0
    , amazonka-codeartifact ^>=2.0
    , amazonka-sqs          ^>=2.0
    , bytestring            ^>=0.12
    , containers            ^>=0.7
    , crypton               ^>=1.0
    , http-client           ^>=0.7
    , http-client-tls       ^>=0.3.6
    , http-types            ^>=0.12
    , hs-opentelemetry-api  ^>=1.0
    , iproute               ^>=1.7
    , memory                ^>=0.18
    , microlens             ^>=0.4.13
    , network               ^>=3.2
    , resourcet             ^>=1.3
    , retry                 ^>=0.9
    , stm                   ^>=2.5
    , text                  ^>=2.1
    , time                  ^>=1.12
    , unliftio              ^>=0.2.25
    , vector                ^>=0.13
    , versions              ^>=6.0
    , wai                   ^>=3.2

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules:
    Ecluse
    Ecluse.App
    Ecluse.Composition
    Ecluse.Config
    Ecluse.Env
    Ecluse.Log
    Ecluse.Server
    Ecluse.Server.Cache
    Ecluse.Server.Context
    Ecluse.Server.Pipeline
    Ecluse.Server.Pipeline.Internal
    Ecluse.Telemetry
    Ecluse.Telemetry.Correlation
    Ecluse.Telemetry.Instruments
    Ecluse.Telemetry.Reporters
    Ecluse.Telemetry.Resolve
    Ecluse.Telemetry.Tracing
    Ecluse.Worker

  build-depends:
    , ecluse:ecluse-core
    , aeson                           ^>=2.2
    , amazonka                        ^>=2.0
    , amazonka-codeartifact           ^>=2.0
    , amazonka-sqs                    ^>=2.0
    , amazonka-sts                    ^>=2.0
    , bytestring                      ^>=0.12
    , cache                           ^>=0.1.3
    , clock                           ^>=0.8
    , containers                      ^>=0.7
    , crypton                         ^>=1.0
    , envparse                        >=0.5  && <0.7
    , http-client                     ^>=0.7
    , http-client-tls                 ^>=0.3.6
    , http-types                      ^>=0.12
    , hs-opentelemetry-api            ^>=1.0
    , hs-opentelemetry-exporter-otlp  ^>=1.0
    , hs-opentelemetry-instrumentation-http-client  ^>=1.0
    , hs-opentelemetry-instrumentation-wai          ^>=1.0
    , hs-opentelemetry-sdk            ^>=1.0
    , iproute                         ^>=1.7
    , katip                           ^>=0.8.8
    , memory                          ^>=0.18
    , microlens                       ^>=0.4.13
    , microlens-aeson                 ^>=2.5
    , network                         ^>=3.2
    , resourcet                       ^>=1.3
    , retry                           ^>=0.9
    , stm                             ^>=2.5
    , text                            ^>=2.1
    , time                            ^>=1.12
    , unix                            ^>=2.8
    , unliftio                        ^>=0.2.25
    , validation-selective            ^>=0.2
    , vector                          ^>=0.13
    , versions                        ^>=6.0
    , wai                             ^>=3.2
    , wai-extra                       ^>=3.1
    , warp                            ^>=3.4

executable ecluse
  import:         shared
  -- The threaded runtime is required: with telemetry enabled the OpenTelemetry SDK
  -- runs a batch span processor on a background thread, which aborts under the
  -- non-threaded RTS. -N lets the server and worker use every core.
  ghc-options:    -threaded -rtsopts "-with-rtsopts=-N"
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  ecluse

-- Internal test-support library shared by every suite below. The common home
-- for cross-suite helpers, fixtures, and specs; it links against the library
-- under test so shared fixtures can build domain values directly.
library ecluse-test-support
  import:          shared
  hs-source-dirs:  test/support
  exposed-modules:
    Ecluse.Test.Package
    Ecluse.Test.Support
    Ecluse.Test.Version

  build-depends:
    , ecluse:ecluse-core
    , hedgehog  ^>=1.5
    , hspec     ^>=2.11
    , text      ^>=2.1

-- Core unit tests: cover every Ecluse.Core.* module. Pure, fast, deterministic. Gating.
-- MUST NOT list the `ecluse` app library in build-depends: its absence is the partition
-- enforcement — an app spec accidentally placed here fails to compile.
test-suite ecluse-core-unit
  import:             shared
  -- hspec-discover generates a Main without an export list.
  ghc-options:        -Wno-missing-export-lists
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     core/test/unit
  other-modules:
    Ecluse.BreakerSpec
    Ecluse.CredentialSpec
    Ecluse.Credential.CodeArtifactSpec
    Ecluse.Credential.Refresh.InternalSpec
    Ecluse.Package.FilterSpec
    Ecluse.Package.IntegritySpec
    Ecluse.Package.MergeSpec
    Ecluse.PackageSpec
    Ecluse.QueueSpec
    Ecluse.Queue.SqsSpec
    Ecluse.Registry.NpmSpec
    Ecluse.Registry.Npm.FilterSpec
    Ecluse.Registry.Npm.ProjectSpec
    Ecluse.Registry.Npm.RouteSpec
    Ecluse.Registry.Npm.ServeSpec
    Ecluse.Registry.Npm.WireSpec
    Ecluse.Registry.Pypi.WireSpec
    Ecluse.Registry.Rubygems.WireSpec
    Ecluse.Rules.EffectfulSpec
    Ecluse.RulesSpec
    Ecluse.SecuritySpec
    Ecluse.Security.EgressSpec
    Ecluse.Server.ConditionalSpec
    Ecluse.Server.ResponseSpec
    Ecluse.Server.RouteSpec
    Ecluse.Server.StreamSpec
    Ecluse.Telemetry.MetricsSpec
    Ecluse.Test.SupportLinkageSpec
    Ecluse.TextSpec
    Ecluse.VersionOrderingSpec
    Ecluse.VersionSpec
    Ecluse.WireSpec

  build-tool-depends: hspec-discover:hspec-discover ^>=2.11
  build-depends:
    , ecluse:ecluse-core
    , ecluse:ecluse-test-support
    , aeson             ^>=2.2
    , amazonka          ^>=2.0
    , bytestring        ^>=0.12
    , case-insensitive  ^>=1.2
    , containers        ^>=0.7
    , crypton           ^>=1.0
    , hedgehog          ^>=1.5
    , hspec             ^>=2.11
    , hspec-hedgehog    ^>=0.3
    , http-client       ^>=0.7
    , http-types        ^>=0.12
    , memory            ^>=0.18
    , network           ^>=3.2
    , retry             ^>=0.9
    , text              ^>=2.1
    , time              ^>=1.12
    , unliftio          ^>=0.2.25
    , vector            ^>=0.13
    , wai               ^>=3.2
    , warp              ^>=3.4
    -- Test-only: gzip a body so the bounded metadata read can be asserted to bound
    -- DECOMPRESSED bytes (a small compressed blob that inflates past the cap). zlib
    -- is already in the resolved build plan (a transitive dependency), so this adds
    -- no new resolution.
    , zlib              ^>=0.7

-- App-layer unit tests: cover every Ecluse.* (non-Core) module. Pure, fast,
-- deterministic. Gating.
test-suite ecluse-unit
  import:             shared
  -- hspec-discover generates a Main without an export list.
  ghc-options:        -Wno-missing-export-lists
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test/unit
  other-modules:
    EcluseSpec
    Ecluse.CompositionSpec
    Ecluse.ConfigSpec
    Ecluse.EnvSpec
    Ecluse.LogSpec
    Ecluse.ServerSpec
    Ecluse.Server.CacheSpec
    Ecluse.Server.PipelineSpec
    Ecluse.Server.Pipeline.InternalSpec
    Ecluse.TelemetrySpec
    Ecluse.Telemetry.CorrelationSpec
    Ecluse.Telemetry.InstrumentsSpec
    Ecluse.Telemetry.ReportersSpec
    Ecluse.Telemetry.ResolveSpec
    Ecluse.Telemetry.TracingSpec
    Ecluse.WorkerSpec

  build-tool-depends: hspec-discover:hspec-discover ^>=2.11
  build-depends:
    , ecluse
    , ecluse:ecluse-core
    , ecluse:ecluse-test-support
    , aeson             ^>=2.2
    , bytestring        ^>=0.12
    , cache             ^>=0.1.3
    , case-insensitive  ^>=1.2
    , containers        ^>=0.7
    , crypton           ^>=1.0
    , envparse          >=0.5 && <0.7
    , hspec             ^>=2.11
    , hspec-wai         ^>=0.11
    , http-client       ^>=0.7
    , http-types        ^>=0.12
    , hs-opentelemetry-api  ^>=1.0
    , hs-opentelemetry-exporter-in-memory  ^>=1.0
    , hs-opentelemetry-instrumentation-http-client  ^>=1.0
    , hs-opentelemetry-instrumentation-wai          ^>=1.0
    , hs-opentelemetry-sdk  ^>=1.0
    , katip             ^>=0.8.8
    , memory            ^>=0.18
    , text              ^>=2.1
    , time              ^>=1.12
    , unliftio          ^>=0.2.25
    , wai               ^>=3.2
    , wai-extra         ^>=3.1
    , warp              ^>=3.4

-- Integration tests: exercise the real request path against in-process servers
-- (and, where they land, AWS-backed code against a ministack container via
-- testcontainers). Hermetic and gating; the AWS cases require a Docker daemon.
test-suite ecluse-integration
  import:             shared
  -- hspec-discover generates a Main without an export list. -threaded is required by
  -- the OpenTelemetry batch span processor the tracing integration test drives
  -- through the live SDK (it aborts under the non-threaded RTS).
  ghc-options:        -Wno-missing-export-lists -threaded
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test/integration
  other-modules:
    Ecluse.AwsEndToEndSpec
    Ecluse.Integration.Ministack
    Ecluse.MirrorQueueSpec
    Ecluse.Security.EgressOriginSpec
    Ecluse.Server.GracefulShutdownSpec
    Ecluse.Server.TarballHostSpec
    Ecluse.TelemetryMetricsSpec
    Ecluse.TelemetryTracingSpec
    Ecluse.Test.SupportLinkageSpec
    Ecluse.WorkerSpec

  build-tool-depends: hspec-discover:hspec-discover ^>=2.11
  build-depends:
    , aeson            ^>=2.2
    , amazonka         ^>=2.0
    , amazonka-sqs     ^>=2.0
    , bytestring       ^>=0.12
    , containers       ^>=0.7
    , crypton          ^>=1.0
    , ecluse
    , ecluse:ecluse-core
    , ecluse:ecluse-test-support
    , hspec            ^>=2.11
    , http-client      ^>=0.7
    , http-types       ^>=0.12
    , hs-opentelemetry-api  ^>=1.0
    , hs-opentelemetry-sdk  ^>=1.0
    , katip            ^>=0.8.8
    , memory           ^>=0.18
    , microlens        ^>=0.4.13
    , network          ^>=3.2
    , resourcet        ^>=1.3
    , testcontainers   ^>=0.5.3
    , text             ^>=2.1
    , time             ^>=1.12
    , unliftio         ^>=0.2.25
    , wai              ^>=3.2
    , wai-extra        ^>=3.1
    , warp             ^>=3.4

-- Smoke tests: live calls to public registries (npm/PyPI) to validate our JSON
-- and protocol handling. ALLOWED TO FAIL by design (non-gating) — they depend on
-- uncontrolled external services.
test-suite ecluse-smoke
  import:             shared
  -- hspec-discover generates a Main without an export list.
  ghc-options:        -Wno-missing-export-lists
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test/smoke
  other-modules:
    Ecluse.Credential.CodeArtifactSpec
    Ecluse.RegistryProtocolSpec
    Ecluse.SecurityResolverOracleSpec
    Ecluse.Test.SupportLinkageSpec
    Ecluse.VersionOraclesSpec

  build-tool-depends: hspec-discover:hspec-discover ^>=2.11
  build-depends:
    , aeson            ^>=2.2
    , containers       ^>=0.7
    , directory        ^>=1.3
    , ecluse
    , ecluse:ecluse-core
    , ecluse:ecluse-test-support
    , hedgehog         ^>=1.5
    , hspec            ^>=2.11
    , hspec-hedgehog   ^>=0.3
    , http-client      ^>=0.7
    , http-client-tls  ^>=0.3.6
    , iproute          ^>=1.7
    , network          ^>=3.2
    , process          ^>=1.6
    , text             ^>=2.1
    , unliftio         ^>=0.2.25

-- End-to-end tests: the whole system as the real OCI image, driven by the real npm
-- CLI over its public HTTP surface, with the server↔worker round-trip across real
-- containers. NON-GATING (pre-merge visibility + nightly) — needs a Docker daemon,
-- the npm CLI, and the `.#dockerImage` build, so it is far heavier than the gate.
-- It COMPILES in the normal build but only RUNS when ECLUSE_E2E_IMAGE names a loaded
-- image (otherwise every case is `pending`), so a bare `cabal test` never fails on a
-- machine without the setup. See planning/slices/S53-e2e-ecosystem.md.
test-suite ecluse-e2e
  import:             shared
  -- hspec-discover generates a Main without an export list.
  ghc-options:        -Wno-missing-export-lists
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test/e2e
  other-modules:
    Ecluse.E2E.Fixtures
    Ecluse.E2E.Harness
    Ecluse.E2E.SuiteSpec
    Ecluse.Test.SupportLinkageSpec

  build-tool-depends: hspec-discover:hspec-discover ^>=2.11
  build-depends:
    , aeson          ^>=2.2
    , bytestring     ^>=0.12
    , containers     ^>=0.7
    , crypton        ^>=1.0
    , directory      ^>=1.3
    , ecluse:ecluse-core
    , ecluse:ecluse-test-support
    , filepath       ^>=1.5
    , hspec          ^>=2.11
    , http-client    ^>=0.7
    , http-types     ^>=0.12
    , memory         ^>=0.18
    , network        ^>=3.2
    , text           ^>=2.1
    , time           ^>=1.12
    , typed-process  ^>=0.2.13
    , unliftio       ^>=0.2.25
